# neuron_morphology

./: .appveyor.yml  .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .gitignore  .readthedocs.yml  AUTHORS.rst  CODEOWNERS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  buildspec.yml  doc_requirements.txt  feature_description.html  optional_requirements.txt  requirements.txt  requirements_test.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.bamboo/: build.sh  test.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package-conda.yml
doc_template/: conf.py  feature_extraction.rst  index.rst  install.rst  overview.rst  spatial_transformation.rst  usage.rst
docker/: Dockerfile.base  Dockerfile.deploy  README.md
neuron_morphology/: __init__.py  _schemas.py  compartment.py  constants.py  deprecated.py  lims_apical_queries.py  marker.py  morphology.py  morphology_builder.py  node.py  report.py  segment.py  soma_layer_depths.py  swc.py  swc_io.py  tree.py  validate_marker.py  validate_reconstruction.py  validate_swc.py
notebooks/: default_features_IVSCC_example.ipynb  default_features_fMOST_example.ipynb  extract_features.py  extract_features_test.ipynb  fMOST_neuron_morphology_features.ipynb  feature_extractor_example.ipynb  feature_gallery.ipynb  grid_tests.ipynb  lims_apical_queries.py  streamline_examples.ipynb  test_upright_methods.ipynb  upright_transform.ipynb  visualize_upright_transform.ipynb
pipeline/: README.md  buildspec.yml  deploy.sh  dynamic_template_config.py
tests/: data.py  objects.py  test_bits_statistics.py  test_bits_validation.py  test_ctfg.py  test_marker_validation.py  test_morphology_builder.py  test_objects.py  test_radius_validation.py  test_reconstruction_grouping.py  test_resample_validation.py  test_swc_io.py  test_tree.py  test_type_validation.py  test_validate_reconstruction.py
(+274 files in other folders)
