[metadata]
name = neuron_morphology
author = Keith Godfrey, Nike Keller
author-email = keithg@alleninstitute.org, nikah@alleninstitute.org
summary = Libraries for neuron morphology analysis
description-file = README.md
classifier = 
	Development Status :: 4 - Beta,
	Intended Audience :: Science/Research,
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English,
	Operating System :: OS Independent,
	Programming Language :: Python :: 2.7
	Topic :: Scientific/Engineering :: Bio-Informatics

[build_sphinx]

[upload_sphinx]

[upload-dir]

[sdist]
formats = bztar,gztar,zip

[bdist]
formats = rpm

[tool:pytest]
pep8maxlinelength = 200
pep8ignore = E124 E201 E202 E231 E401 W293 W291

[pep8]
maxlinelength = 200
ignore = E124 E201 E202 E231 E401 W293 W291

[lint]
lint-output-format = html
lint-files-output = y
lint-reports = y
lint-output = lint

[bdist_wheel]
universal = 1

